# yc

./: Cargo.toml  README.md
.github/workflows/: build.yml
config/: mtd8300.json  mtd8300u.json  mtd9400.json  mtd9400p.json
module/: module.prop  post-fs-data.sh  service.sh  uninstall.sh
module/config/: perapp_powermode.txt
module/script/: init_once.sh
src/: main.rs
src/config/: mod.rs
src/cpu/: mod.rs
src/fsm/: mod.rs
src/gpu/: mod.rs
src/input/: mod.rs
src/sched/: mod.rs
src/sysfs/: mod.rs
src/watcher/: mod.rs
