[package]
name = "uperf"
version = "0.1.0"
edition = "2021"
description = "Userspace performance controller for Android — Rust rewrite"

[[bin]]
name = "uperf"
path = "src/main.rs"

[dependencies]
serde       = { version = "=1.0.197", features = ["derive"] }
serde_json  = "=1.0.114"
regex       = "=1.10.4"
log         = "=0.4.21"
env_logger  = "=0.10.2"
inotify     = "=0.9.6"
nix         = { version = "=0.27.1", features = ["sched", "process"] }
libc        = "=0.2.153"
clap        = { version = "=4.4.18", features = ["derive"] }
anyhow      = "=1.0.80"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
